revising order of items in mobile footer to prevent wraparound and increasing line-height for easier tapping in case of wraparound

--- a/onebusaway-nyc-webapp/src/main/webapp/css/mobile/mobile.css
+++ b/onebusaway-nyc-webapp/src/main/webapp/css/mobile/mobile.css
@@ -203,6 +203,7 @@ span.noUpcomingService {
     background-color: #ffffff;
     color: #0358B6;
     padding: 0.6em 1.2em;
+    line-height: 1.6em;
 }
 #footer a:link, 
 #footer a:visited {
